--- a/index.html
+++ b/index.html
@@ -229,7 +229,8 @@
 
   // Initialize Firebase
   const app = initializeApp(firebaseConfig);
-  const analytics = getAnalytics(app);
+  
+  //const analytics = getAnalytics(app);
  const auth = getAuth(app);
   const db = getFirestore(app);
 
